--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
     "nodemon": "^3.1.3",
     "sequelize": "^6.37.3",
